ingress/templates/k8s-grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-grafana-ingress
  namespace: prometheus-grafana-k8s
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing  # or "internal" if needed
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: "grafana-group"  # Optional grouping
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb  # Set ALB as the ingress class
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service  # Ensure this matches your service
                port:
                  number: 80
