ingress/templates/k8s-prometheus-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-prometheus-ui-ingress
  namespace: prometheus-grafana-k8s
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: johnk8sprometheus.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-kube-prom-stack-kube-p-prometheus
            port:
              number: 9090
